--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       
       <div class="project-div" >
         <div class="project-image" style="background-image: url('/kickoff.png');">
-          <a href="https://kickoff-challenge-football.web.app/" class="project-details">
+          <a href="https://kickoff-challenge-football.web.app/" class="project-link">
             Visit Site
           </a>
         </div>
