--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    <meta charset="UTF-8" />
+    <meta name="description" content="A portfolio for Saruni showcasing projects in E-commerce, blogging, catalog, and sports entertainment." />
+    <meta name="keywords" content="Saruni, Moses Saruni, Portfolio, E-commerce, Blog, Catalog, Sports, Web Development, Projects" />
+    <meta name="author" content="Moses Saruni" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Saruni Portfolio" />
+    <meta property="og:description" content="A portfolio for Saruni showcasing various projects." />
+    <meta property="og:image" content="/public/icon.png" />
+    <meta property="og:url" content="https://saruni-portfolio.netlify.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Saruni Portfolio" />
+    <meta name="twitter:description" content="A portfolio for Saruni showcasing various projects." />
     <link rel="stylesheet"  href="style.css" />
     <link rel="stylesheet"  href="main.css" />
-    <meta charset="UTF-8" />
-    <meta name="description" content="A portfolio for Saruni">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="clown.png">
+    <link rel="icon" href="/public/icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
     <title>Saruni Portfolio</title>
@@ -53,7 +63,7 @@
         <h2>Nuria</h2>
         <p>E-Commerce</p>
         </div>
-      <div  class="project-image" style="background-image: url('nuria.png');">
+      <div  class="project-image" style="background-image: url('/public/nuria.png');">
 
         <a href="https://nuria.web.app/" class="project-details">
           Visit Site
@@ -65,7 +75,7 @@
 
 
       <div class="project-div" >
-        <div class="project-image" style="background-image: url('/fool.png');">
+        <div class="project-image" style="background-image: url('/public/fool.png');">
           <a href="https://wisefool.pythonanywhere.com/article/the-fool" class="project-details">
             Visit Site
           </a>
@@ -87,7 +97,7 @@
         <h2>Brian Technologies</h2>
         <p>Catalog</p>
         </div>
-      <div class="project-image" style="background-image: url('/brian.png');">
+      <div class="project-image" style="background-image: url('/public/brian.png');">
         <a href="https://briantech.web.app/" class="project-details">
           Visit Site
         </a>
@@ -98,7 +108,7 @@
 
       
       <div class="project-div" >
-        <div class="project-image" style="background-image: url('/kickoff.png');">
+        <div class="project-image" style="background-image: url('/public/kickoff.png');">
           <a href="https://kickoff-challenge-football.web.app/" class="project-link">
             Visit Site
           </a>
@@ -133,7 +143,7 @@
 
 
     <script>
-    var profileElement = document.getElementById("saruni");
+   var profileElement = document.getElementById("saruni");
 var codeElement = document.getElementById("code");
 var textToType = "<Hello Visitor ";
 var originalText = "<code/>";
@@ -151,7 +161,7 @@ function typeEffect(text, nextAction) {
         isTyping = false;
         index = 0;
         if (nextAction) {
-            setTimeout(nextAction, 1000); // Wait for 1 second before next action
+            setTimeout(nextAction, 1000);
         }
     }
 }
@@ -168,7 +178,7 @@ function backspaceEffect(nextAction) {
     }
 }
 
-profileElement.addEventListener("mouseover", function () {
+function startTypeEffect() {
     if (!isTyping) {
         isTyping = true;
         index = 0;
@@ -177,9 +187,9 @@ profileElement.addEventListener("mouseover", function () {
         clearTimeout(backspacingInterval);
         typeEffect(textToType);
     }
-});
+}
 
-profileElement.addEventListener("mouseout", function () {
+function startBackspaceEffect() {
     clearTimeout(typingInterval);
     backspaceEffect(() => {
         typeEffect(newText, () => {
@@ -188,7 +198,31 @@ profileElement.addEventListener("mouseout", function () {
             });
         });
     });
-});
+}
+
+// Check if it's a mobile device
+function isMobile() {
+    return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+}
+
+if (isMobile()) {
+    // Use Intersection Observer for mobile
+    var observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                startTypeEffect();
+            } else {
+                startBackspaceEffect();
+            }
+        });
+    }, { threshold: 0.5 }); // Adjust threshold as needed
+
+    observer.observe(profileElement);
+} else {
+    // Use mouse events for desktop
+    profileElement.addEventListener("mouseover", startTypeEffect);
+    profileElement.addEventListener("mouseout", startBackspaceEffect);
+}
     </script>
 
     <script>
