--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="UTF-8" />
-    <meta name="description" content="A portfolio for Saruni showcasing projects in E-commerce, blogging, catalog, and sports entertainment." />
+    <meta name="description" content="A portfolio for Saruni showcasing projects in web development,E-commerce, blogging, catalog, and sports entertainment." />
     <meta name="keywords" content="Saruni, Moses Saruni, Portfolio, E-commerce, Blog, Catalog, Sports, Web Development, Projects" />
     <meta name="author" content="Moses Saruni" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -63,9 +63,9 @@
         <h2>Nuria</h2>
         <p>E-Commerce</p>
         </div>
-      <div  class="project-image" style="background-image: url('/public/nuria.png');">
+      <div  class="project-image" style="background-image: url('/nuria.png');">
 
-        <a href="https://nuria.web.app/" class="project-details">
+        <a href="https://nuria.web.app/" class="project-link">
           Visit Site
         </a>
       </div>
@@ -75,8 +75,8 @@
 
 
       <div class="project-div" >
-        <div class="project-image" style="background-image: url('/public/fool.png');">
-          <a href="https://wisefool.pythonanywhere.com/article/the-fool" class="project-details">
+        <div class="project-image" style="background-image: url('/fool.png');">
+          <a href="https://wisefool.pythonanywhere.com/article/the-fool" class="project-link">
             Visit Site
           </a>
         </div>
@@ -97,8 +97,8 @@
         <h2>Brian Technologies</h2>
         <p>Catalog</p>
         </div>
-      <div class="project-image" style="background-image: url('/public/brian.png');">
-        <a href="https://briantech.web.app/" class="project-details">
+      <div class="project-image" style="background-image: url('/brian.png');">
+        <a href="https://briantech.web.app/" class="project-link">
           Visit Site
         </a>
       </div>
@@ -108,7 +108,7 @@
 
       
       <div class="project-div" >
-        <div class="project-image" style="background-image: url('/public/kickoff.png');">
+        <div class="project-image" style="background-image: url('/kickoff.png');">
           <a href="https://kickoff-challenge-football.web.app/" class="project-link">
             Visit Site
           </a>
