--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="about-content">
         <div class="personal">
           <h3>Personal</h3>
-          <p>Not coding? reading,writing,drawing or rather doodling and occassionally,daydreaming.<br/> I like trying my hand at new skills .Key-word "like".So please dont ask what...</p>
+          <p>Not coding..? <br>Reading,writing,drawing or rather doodling and occassionally,daydreaming.<br> I like trying my hand at new skills .Key Word "like".<br>So please dont ask what...</p>
         </div>
         <div class="professional">
           <h3>Professional</h3>
@@ -68,7 +68,7 @@
             <li>Front-end: HTML, CSS, JavaScript, React</li>
             <li>Back-end: Node.js, Python, Django</li>
             <li>Database: MySQL, Postgres, Firebase </li>
-            <li> Git, AWS, Agile methodologies</li>
+            <li>Git, AWS, Agile methodologies</li>
           </ul>
         </div>
       </div>
