--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
       <div class="about-content">
         <div class="personal">
           <h3>Personal</h3>
-          <p>Not coding..? <br>Reading,writing,drawing or rather doodling and occassionally,daydreaming.<br> I like trying my hand at new skills .Key Word "like".<br>So please dont ask what...</p>
+          <p>Reading,writing,drawing or rather doodling and occassionally,daydreaming.</p>
+          <p> I like trying my hand at new skills .Key-Word,"like"</p>
+          <p>"Master of Creative Visualization with over a decade of experience in strategic daydreaming, consistently generating innovative ideas and mental simulations that push the boundaries of imagination."</p>
         </div>
         <div class="professional">
           <h3>Professional</h3>
