--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     <div id="about-me">
       <div class="about-content">
         <div class="personal">
-          <p class="console-text">I love problems, so share yours with me</p>
-         
-          <p class="console-text">I'll listen, and if I can, help analyze the problem</p>
-          <p class="console-text">We'll find a solution, together...</p>
-          <p class="console-text">I also love reading, writing, drawing or rather doodling and occasionally, daydreaming.</p>
+          <p class="console-text">I'm a problem-solver at heart—so feel free to share yours with me.</p>
+          <p class="console-text">I'll listen carefully and, if I can, help you analyze the issue.</p>
+          <p class="console-text">Together, we'll work towards a solution that makes sense.</p>
+          <p class="console-text">When I'm not solving problems, you'll find me immersed in reading, writing, doodling, and, from time to time, daydreaming.</p>
         </div>
+        
         <div class="professional">
           <p class="console-text">Tech Stack</p>
           <div class="skill-icons">
