--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="about-me">
       <div class="about-content">
         <div class="personal">
-          <p class="console-text">I’m Saruni.I specialize in front-end development with a keen interest in backend integrations, particularly using technologies like React, Firebase, and Next.js.</p>
+          <p class="console-text">I’m Saruni,a fullstack developer</p>
           <p class="console-text">I have a background in computer science,expected to graduate in Dec,2024. I've built and contributed to projects ranging from e-commerce to business management systems and more recently, innovative social media and football analysis tools.</p>
           <p class="console-text">When I’m not coding, you’ll find me immersed in writing stories, working on my blog 'The Wise Fool,' or brainstorming new ways to make tech accessible and fun. Let's solve some problems together and bring ideas to life!</p>
         </div>
