--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
     
         <div class="project-div parallax-project">
           <div class="project-image" style="background-image: url('/fool.png');">
-            <a href="https://wisefool.pythonanywhere.com/article/the-fool" target="_blank" rel="noopener noreferrer" class="project-link">
+            <a href="https://wisefool.xyz" target="_blank" rel="noopener noreferrer" class="project-link">
               Visit Site
             </a>
           </div>
           <div class="project-details">
-            <h2>            <a href="https://wisefool.pythonanywhere.com/article/the-fool" target="_blank" rel="noopener noreferrer" >Wise Fool</a></h2>
+            <h2>            <a href="https://wisefool.xyz" target="_blank" rel="noopener noreferrer" >Wise Fool</a></h2>
             <p>Blog Site</p>
             <p>Wise Fool is a personal blog site where I write about philosophy, psychology, science with a twist of humor and irony. The platform allows easy content management and publishing.</p>
             <p><strong>Tech Stack:</strong> Python, Flask, SQLite, HTML/CSS</p>
