--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@ document.addEventListener('DOMContentLoaded', () => {
   </div>
 
   <div class="about-content">
-    <div class="personal">
-      <p class="console-text">I'm Saruni, a fullstack developer</p>
-      <p class="console-text">I'm working on enhancing my skills in JavaScript libraries and exploring new ways to improve user authentication systems.</p>
-      <p class="console-text">When I'm not coding, you'll find me immersed in writing stories, working on my blog 'The Wise Fool,' or brainstorming new ways to make tech accessible and fun</p>
-    </div>
+ <div class="personal">
+  <p class="console-text">I build things that matter. Okay—mostly.</p>
+  <p class="console-text">I specialize in AI integrations, WhatsApp-based platforms, Web Development and turning "that's impossible" into production code.</p>
+  <p class="console-text">Off the clock, I write 'The Wise Fool'—philosophy, irony, and the occasional existential crisis.</p>
+</div>
     <div class="professional">
       <p class="console-text">Tech Stack</p>
       <div class="skill-icons">
